FileWatcher + Sample Config

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -6,10 +6,13 @@ if (UNIX)
     add_executable(zia
             # CLion Project Includes
             ${CMAKE_CURRENT_LIST_DIR}/include/Pipeline.hpp
-            ${CMAKE_CURRENT_LIST_DIR}/include/ModuleLoader.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/ThreadPool.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/ModuleLoader.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/IModuleLoader.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/UnixModuleLoader.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/FileWatcher.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/IFileWatcher.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/UnixFileWatcher.hpp
 
             sza/api/http.h
             sza/api/net.h
@@ -19,17 +22,20 @@ if (UNIX)
             ${CMAKE_CURRENT_LIST_DIR}/srcs/Pipeline.cpp
             ${CMAKE_CURRENT_LIST_DIR}/srcs/main.cpp
             ${CMAKE_CURRENT_LIST_DIR}/srcs/UnixModuleLoader.cpp
-            ${CMAKE_CURRENT_LIST_DIR}/srcs/ThreadPool.cpp)
+            ${CMAKE_CURRENT_LIST_DIR}/srcs/ThreadPool.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/srcs/UnixFileWatcher.cpp)
 endif (UNIX)
 
 if (WIN32)
     add_executable(zia
             # CLion Project Includes
             ${CMAKE_CURRENT_LIST_DIR}/include/Pipeline.hpp
-            ${CMAKE_CURRENT_LIST_DIR}/include/ModuleLoader.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/ThreadPool.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/ModuleLoader.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/IModuleLoader.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/WinModuleLoader.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/FileWatcher.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/IFileWatcher.hpp
 
             sza/api/http.h
             sza/api/net.h
@@ -42,12 +48,12 @@ if (WIN32)
             ${CMAKE_CURRENT_LIST_DIR}/srcs/ThreadPool.cpp)
 endif (WIN32)
 
-add_executable(testCompilationBoost ${CMAKE_CURRENT_LIST_DIR}/tests/testBoostCompilation.cpp)
-target_link_libraries(testCompilationBoost ${Boost_LIBRARIES})
-add_test(TestBoost testCompilationBoost)
-
 if (UNIX)
     target_link_libraries(zia dl pthread)
+
+    add_executable(testCompilationBoost ${CMAKE_CURRENT_LIST_DIR}/tests/testBoostCompilation.cpp)
+    target_link_libraries(testCompilationBoost ${Boost_LIBRARIES})
+    add_test(TestBoost testCompilationBoost)
 endif(UNIX)
 
 if (WIN32)
