--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -33,6 +33,8 @@ endif (UNIX)
 if (WIN32)
     add_executable(zia
             # CLion Project Includes
+			${CMAKE_CURRENT_LIST_DIR}/include/Core.hpp
+            ${CMAKE_CURRENT_LIST_DIR}/include/Server.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/Pipeline.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/ThreadPool.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/ModuleLoader.hpp
@@ -40,16 +42,20 @@ if (WIN32)
             ${CMAKE_CURRENT_LIST_DIR}/include/WinModuleLoader.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/FileWatcher.hpp
             ${CMAKE_CURRENT_LIST_DIR}/include/IFileWatcher.hpp
+			${CMAKE_CURRENT_LIST_DIR}/include/WinFileWatcher.hpp
 
             sza/api/http.h
             sza/api/net.h
             sza/api/conf.h
             sza/api/module.h
 
+			${CMAKE_CURRENT_LIST_DIR}/srcs/Core.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/srcs/Server.cpp
             ${CMAKE_CURRENT_LIST_DIR}/srcs/Pipeline.cpp
             ${CMAKE_CURRENT_LIST_DIR}/srcs/main.cpp
             ${CMAKE_CURRENT_LIST_DIR}/srcs/WinModuleLoader.cpp
-            ${CMAKE_CURRENT_LIST_DIR}/srcs/ThreadPool.cpp)
+            ${CMAKE_CURRENT_LIST_DIR}/srcs/ThreadPool.cpp
+			${CMAKE_CURRENT_LIST_DIR}/srcs/WinFileWatcher.cpp)
 endif (WIN32)
 
 if (UNIX)
