--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.9)
 
 include(${CMAKE_CURRENT_LIST_DIR}/Network/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Cgi/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/Serializer/CMakeLists.txt)
