--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -4,5 +4,4 @@ include(${CMAKE_CURRENT_LIST_DIR}/Network/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Cgi/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Serializer/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Unserializer/CMakeLists.txt)
-
-include(${CMAKE_CURRENT_LIST_DIR}/Ssl/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/SslNetwork/CMakeLists.txt)
