--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.9)
 
 include(${CMAKE_CURRENT_LIST_DIR}/Network/CMakeLists.txt)
-include(${CMAKE_CURRENT_LIST_DIR}/Cgi/CMakeLists.txt)
+if (UNIX)
+	include(${CMAKE_CURRENT_LIST_DIR}/Cgi/CMakeLists.txt)
+endif (UNIX)
 include(${CMAKE_CURRENT_LIST_DIR}/Serializer/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Unserializer/CMakeLists.txt)
