--- a/Modules/Serializer/CMakeLists.txt
+++ b/Modules/Serializer/CMakeLists.txt
@@ -2,23 +2,16 @@ cmake_minimum_required(VERSION 3.9)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
 
-if (UNIX)
-    add_library(zia-serializer SHARED
-            ${CMAKE_CURRENT_LIST_DIR}/srcs/Serializer.cpp
-            ${CMAKE_CURRENT_LIST_DIR}/srcs/Loader.cpp
 
-            ${CMAKE_CURRENT_LIST_DIR}/include/Serializer.hpp)
-endif (UNIX)
+add_library(zia-serializer SHARED
+        ${CMAKE_CURRENT_LIST_DIR}/srcs/Serializer.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/srcs/Loader.cpp
 
-if (WIN32)
-    add_library(zia-serializer SHARED
-            ${CMAKE_CURRENT_LIST_DIR}/srcs/WinSocket.cpp)
-endif (WIN32)
+        ${CMAKE_CURRENT_LIST_DIR}/include/Serializer.hpp)
 
 
 if (UNIX)
-    enable_testing()
-    target_link_libraries(zia-serializer pthread)
+    target_link_libraries(zia-serializer)
 
     set (CMAKE_CXX_FLAGS "-std=c++17")
 
@@ -31,8 +24,3 @@ if (UNIX)
     target_link_libraries(testCompilationBoostSerializer ${Boost_LIBRARIES})
     add_test(TestBoost testCompilationBoostSerializer)
 endif(UNIX)
-
-
-if (WIN32)
-    target_link_libraries(zia-serializer Ws2_32)
-endif(WIN32)
