--- a/Modules/Unserializer/CMakeLists.txt
+++ b/Modules/Unserializer/CMakeLists.txt
@@ -8,16 +8,15 @@ add_library(zia-unserializer SHARED
 
       ${CMAKE_CURRENT_LIST_DIR}/include/Unserializer.hpp)
 
-enable_testing()
-target_link_libraries(zia-unserializer pthread)
+if (UNIX)
+	set (CMAKE_CXX_FLAGS "-std=c++17")
 
-set (CMAKE_CXX_FLAGS "-std=c++17")
+	add_executable(testUnserializer
+					${CMAKE_CURRENT_LIST_DIR}/srcs/Unserializer.cpp
+					${CMAKE_CURRENT_LIST_DIR}/srcs/Loader.cpp
 
-add_executable(testUnserializer
-        ${CMAKE_CURRENT_LIST_DIR}/srcs/Unserializer.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/srcs/Loader.cpp
-
-        ${CMAKE_CURRENT_LIST_DIR}/include/Unserializer.hpp
-      ${CMAKE_CURRENT_LIST_DIR}/tests/UnserializerTests.cpp)
-target_link_libraries(testUnserializer ${Boost_LIBRARIES})
-add_test(TestBoost testUnserializer)
+					${CMAKE_CURRENT_LIST_DIR}/include/Unserializer.hpp
+					${CMAKE_CURRENT_LIST_DIR}/tests/UnserializerTests.cpp)
+	target_link_libraries(testUnserializer ${Boost_LIBRARIES})
+	add_test(TestBoost testUnserializer)
+endif (UNIX)
