HTML basic module

--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -7,4 +7,6 @@ endif (UNIX)
 include(${CMAKE_CURRENT_LIST_DIR}/Serializer/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Unserializer/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Ssl/CMakeLists.txt)
+include(${CMAKE_CURRENT_LIST_DIR}/Html/CMakeLists.txt)
+
 
