--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -8,5 +8,4 @@ include(${CMAKE_CURRENT_LIST_DIR}/Serializer/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Unserializer/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Ssl/CMakeLists.txt)
 include(${CMAKE_CURRENT_LIST_DIR}/Html/CMakeLists.txt)
-
-
+include(${CMAKE_CURRENT_LIST_DIR}/Authenticator/CMakeLists.txt)
